# math21

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  math21.pc.in  math21_user_config.h.in
src/: CMakeLists.txt
src/ad/: CMakeLists.txt  differential.cc  differential.h  files.h  files_c.h  inner.h  inner_cc.h
src/ad/export/: 01.cc  01.h  02.cc  02.h  differential_operators.cc  differential_operators.h  files.h  inner.h  inner_c.h  point.cc  point.h  test_01.cc  test_01_c.h
src/ad/functions_01/: ad_global.cc  ad_global.h  files.h  inner_cc.h  mat_block_diag_same.cc  mat_block_diag_same.h  mat_eye.cc  mat_eye.h  mat_jacobian.cc  mat_jacobian.h  num_add.cc  num_add.h  num_assign.cc  num_assign.h  num_constant.cc  num_constant.h  num_input.cc  num_input.h  num_multiply.cc  num_multiply.h  op_add.cc  op_add.h  op_assign.cc  op_assign.h  op_do_nothing.cc  op_do_nothing.h  op_ele_unary.cc  op_ele_unary.h  op_get_shape.cc  op_get_shape.h  op_mat_mul.cc  op_mat_mul.h  op_mat_trans.cc  op_mat_trans.h  op_multiply.cc  op_multiply.h  op_share_reshape.cc  op_share_reshape.h  op_sin.cc  op_sin.h  (+6 more)
src/ad/functions_02/: files.h  inner.h  inner_cc.h  op_broadcast_tensor.cc  op_broadcast_tensor.h  op_exp.cc  op_exp.h  op_inner_product.cc  op_inner_product.h  op_log.cc  op_log.h  op_m_to_n.cc  op_m_to_n.h  op_power.cc  op_power.h  op_row_pack.cc  op_row_pack.h  op_row_unpack_i.cc  op_row_unpack_i.h
src/ad/functions_03/: files.h  inner.h  inner_cc.h  op_axis_swap.cc  op_axis_swap.h  op_concatenate.cc  op_concatenate.h  op_list_to_i_var.cc  op_list_to_i_var.h  op_logsumexp.cc  op_logsumexp.h  op_merge_vectors.cc  op_merge_vectors.h  op_mvn_logpdf.cc  op_mvn_logpdf.h  op_push.cc  op_push.h  op_repeat.cc  op_repeat.h  op_vars_to_list.cc  op_vars_to_list.h  op_vec_share_sub.cc  op_vec_share_sub.h
src/ad/functions_04/: files.h  inner.h  inner_cc.h  op_max.cc  op_max.h  op_mean.cc  op_mean.h
src/ad/ml/: files.h  files_c.h  inner.h  rnn.cc  rnn.h  sin01.cc  sin01.h  test_01.cc  test_01_c.h
src/algebra/: CMakeLists.txt  after_set_sequence.h  dict.cc  dict.h  files.h  inversible_map.cc  inversible_map.h  map.h  relation.h  sequence.cc  sequence.h  set.h
src/data_structure/: Stack.cc  Stack.h  files.h  files_c.h  inner.h  inner_c.h  inner_cc.h  list.c  list_c.h  seqce.h  tree.c  tree_c.h
src/data_structure/Digraph/: DepthFirstDirectedPaths.cc  DepthFirstDirectedPaths.h  (+5 more)
src/draw/: draw.cc  draw.h  files.h  inner.h  inner_header.h
src/feel/: Function.h  Functional.h  IndexFunctional.h  feel.h  inner.h
src/functions/: CMakeLists.txt  cnn.cc  cnn.h  commonFunctions.cc  commonFunctions.h  f_ex_sin.cc  f_ex_sin.h  f_example_2.cc  f_example_2.h  files.h  files_c.h  inner.h  inner_c.h  inner_cc.h  polynomial.cc  polynomial.h
src/generic/: files.h  files_c.h  inner.h  inner_cc.h
src/gpu/: cuda_info.cc  cuda_info.h  files.h  files_c.h  gpu.cc  gpu.cu  gpu.h  gpu_c.h  inner.h  openmp_info.cc  openmp_info.h  test.cu  test_c.h
src/image/: files.h  files_c.h  image.cc  image.cu  image.h  image_c.h  inner.h  inner_cu.h  inner_h.h  inner_src.h
src/linear_algebra/: AffineTransform.cc  AffineTransform.h  files.h  inner.h  inner_header.h  inner_src.h  operations.cu  projection.cc  projection.h
src/matlab/: 01.cc  01.h  files.h  inner.h  matlab.cc  matlab.h
src/matrix/: CMakeLists.txt  LightVector.h  _array.cc  _array.h  _tenAfter.cc  _tenAfter.h  _tenBefore.h  _tenMid.cc  _tenMid.h  after_ops.cc  after_ops.h  array.h  array2d.cc  array2d.h  arrayImpl.h  files.h  files_c.h  inner.h  inner_c.h  last_01.h  matrix.h  ten.h  tenBroadcast.cc  tenBroadcast.h  tenSub.h  tenView.h  ten_ops.h  vec_ops.h
src/matrix_analysis/: CMakeLists.txt  declarations.cc  eigen_sym.cc  eigen_sym.h  files.h  gje.cc  gje.h  inner.h  mrq.cc  mrq.h  ops.h  svd.cc  svd.h
src/matrix_op/: CMakeLists.txt  declarations.h  files.h  inner.h  mat_ops.cc  mat_ops.h  operations.cc  operations.h  ops_after_01.cc  ops_after_01.h  serialize.h  ten_ops.cc  ten_ops.h  vec_ops.h
src/memory/: AutoBuffer.cc  AutoBuffer.h  BufferNew.cc  BufferNew.h  CMakeLists.txt  files.h  files_c.h  inner.h  inner_c.h  inner_cc.h  tool.cc  tool.h  util.c  util_c.h
src/ml/: files.h  files_c.h  inner.h  inner_c.h
src/numbers/: CMakeLists.txt  _assert.cc  _assert.h  _assert_c.h  error.h  export.h  files.h  files_c.h  inner.h  inner_c.h  kernel_tool  number.h  number_c.h  number_types.h  serialize.cc  serialize.h  std_wrapper.cc  std_wrapper.h  system.h  tool2.cc  tool2.h  util.cc  util_c.h
src/op/: 01.h  02.h  c_operations.h  files.h  inner.h  test.cc  test.h
src/opt/: CMakeLists.txt  ConjugateGradient.cc  ConjugateGradient.h  LevMar.cc  LevMar.h  OptAlg.cc  OptAlg.h  SteepestDescent.cc  SteepestDescent.h  adam.cc  adam.h  files.h  files_c.h  inner.h  inner_c.h  inner_cc.h
src/point/: files.h  files_c.h  inner_cc.h  object.cc  object.h  point.cc  point_c.h  point_cc.h
src/print/: CMakeLists.txt  SimpleStreamBuf.h  files.h  files_c.h  inner_c.h  log.cc  log.h  log_c.h  timer.cc  timer.h  tool.cc  tool.h
src/probability/: CMakeLists.txt  distributions.cc  distributions.h  distributions_c.h  files.h  files_c.h  inner.h  inner_c.h  inner_cc.h  ran.cc  ran.h  ran_c.c  ran_c.h
src/rl/: README.md
src/template/: files.h  tic_tac_toe.cc  tic_tac_toe.h
src/think/: Algorithm.h  function.cc  function.h  inner.h  think.h
src/tool/: data.cc  data.h  file.cc  file.h  file_c.h  files.h  files_c.h  inner_c.h  string.cc  string.h  string_c.h  text.cc  text.h  thread.cc  thread_c.h
src/variables/: CMakeLists.txt  Variable.cc  Variable.h  VariableMap.cc  VariableMap.h  files.h  inner.h
test/: CMakeLists.txt  main.cc  test.h
test/ad/: files.h  n_derivative.cc  n_derivative.h  sin.cc  sin.h  test.cc
test/algebra/: files.h  test.cc
test/data_structure/: CMakeLists.txt  Stack.cc  Stack.h  files.h  test.cc
test/draw/: files.h  test.cc
test/matrix/: CMakeLists.txt  files.h  test.cc  test_matrix_multiply.cc
test/opt/: CMakeLists.txt  fdm_demo.cc  files.h  levmar_demo.cc  levmar_fdm_demo.cc  test.cc
unit_test/numbers/: CMakeLists.txt  test.cc
(+360 files in other folders)
